[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["nicola puligheddu <nicola.puligheddu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

